--- a/src/main/resources/assets/bischlmod/lang/en_us.json
+++ b/src/main/resources/assets/bischlmod/lang/en_us.json
@@ -13,6 +13,8 @@
   "item.bischlmod.cog_music_disc": "Castle of Glass Music Disc",
   "item.bischlmod.cog_music_disc.desc": "Linkin Park - Castle of Glass (Vocal Cover by Vonuras)",
 
+  "item.bischlmod.porcupine_spawn_egg": "Bischl Spawn Egg",
+
   "sounds.bischlmod.metal_detector_found_ore": "Metal Detector Jingle",
 
   "itemgroup.ruby": "Ruby Tab"
